# economic-dashboard

./: .gitignore  app.py  config.yaml  pyproject.toml  requirements.txt
components/: business_cycle_chart.py  cpi_chart.py
data/: business_cycle.py  cpi.py
